--- a/src/views/layouts/home.handlebars
+++ b/src/views/layouts/home.handlebars
@@ -8,13 +8,57 @@
 <body>
   <h1>Lista de Productos</h1>
   <ul>
-    {{#each products}}
-       <p>Nombre: {{this.title}}</p>
-            <p>Descripción: {{this.description}}</p>
-            <p>Precio:$ {{this.price}}</p>
-            <button> Comprar </button>
-    {{/each}}
-  </ul>
+{{#each products}}
+  <div class="product">
+    <h2>{{this.title}}</h2>
+    <p>{{this.description}}</p>
+    <p>Precio: ${{this.price}}</p>
+    <a href="/products/{{this.productId}}">Ver detalles</a>
+    <form action="/api/carts/{{cartId}}/products/{{this.productId}}" method="POST">
+      <button type="submit">Agregar al carrito</button>
+    </form>
+  </div>
+{{/each}}
+<div class="product-details">
+  <h2>{{product.title}}</h2>
+  <p>{{product.description}}</p>
+  <p>Categoría: {{product.category}}</p>
+  <p>Precio: ${{product.price}}</p>
+  <p>Stock disponible: {{product.stock}}</p>
+
+  {{#if product.thumbnails.length}}
+    <div class="thumbnails">
+      {{#each product.thumbnails}}
+        <img src="{{this}}" alt="Imagen del producto">
+      {{/each}}
+    </div>
+  {{/if}}
+
+  <form action="/api/carts/{{cartId}}/products/{{product.productId}}" method="POST">
+    <button type="submit">Agregar al carrito</button>
+  </form>
+</div>
+<div class="pagination">
+  {{#if hasPrevPage}}
+    <a href="?page={{prevPage}}">Anterior</a>
+  {{/if}}
+  {{#if hasNextPage}}
+    <a href="?page={{nextPage}}">Siguiente</a>
+  {{/if}}
+</div>
+
+<h1>Carrito {{cart._id}}</h1>
+
+{{#each cart.products}}
+  <div class="cart-product">
+    <h2>{{this.product.title}}</h2>
+    <p>Cantidad: {{this.quantity}}</p>
+    <p>Precio: ${{this.product.price}}</p>
+    <form action="/api/carts/{{cart._id}}/products/{{this.product.productId}}" method="DELETE">
+      <button type="submit">Eliminar</button>
+    </form>
+  </div>
+{{/each}}
   <a href="/realtimeproducts">Ver productos en tiempo real</a>
 </body>
 </html>
